# Keylogger_Rust_3SI3

./: Cargo.toml  README.md
Attaquant/: Cargo.toml  README.md
Attaquant/src/: main.rs
Attaquant/src/modules/: crypto.rs  key_manager.rs  logger.rs  mod.rs  network.rs
Victime/: Cargo.toml
Victime/src/: main.rs
Victime/src/modules/: decrypt.rs  logger.rs  mod.rs  network.rs  persistence.rs
src/: main.rs
src/modules/: crypto.rs  decrypt.rs  key_manager.rs  logger.rs  mod.rs  network.rs  persistence.rs
